Add runtime Java VM option parser
Consolidate runtime parsing of Java VM options that reach Native Image through CreateJavaVM, graal_create_isolate, and native-image main startup. The new parser handles ordinary -D properties, selected module options, --enable-preview, -Xbootclasspath/a:, and recognized-but-unimplemented option rejection while preserving caller-specific handling for unknown arguments.

Add LegacyJavaOptionMode to keep the existing compatibility boundary by default, with non-legacy mode available for Crema libjvm and related tests. Runtime module augmentation now covers boot-layer updates, service-provider visibility, upgrade-module-path validation, and property initialization ordering.